--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --mode production",
-    "watch": "webpack --mode development -w"
+    "watch": "webpack --mode development -w",
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -29,6 +30,7 @@
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
