--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -6,6 +6,10 @@
   ],
   "plugins": [
     "@babel/proposal-class-properties",
-    "@babel/proposal-object-rest-spread"
+    "@babel/proposal-object-rest-spread",
+    ["import", {
+      "libraryName": "antd",
+      "style": "css"
+    }]
   ]
 }
