--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "antd": "^3.26.7",
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -25,8 +26,10 @@
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.1",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
