--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,18 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-toml = "0.5"
 actix-web = "2.0"
 actix = "0.9.0"
 actix-rt = "1.0"
-
-[dependencies.rusqlite]
-version = "0.21.0"
-features = ["bundled"]
+actix_files = "0.2.1"
+diesel = { version = "1.4.2", features = ["chrono", "sqlite", "serde_json"] }
+dotenv = "0.10.1"
+failure = "0.1.5"
+validator = "0.8.0"
+validator_derive = "0.8.0"
+serde_derive = "1.0.91"
+serde_json = "1.0.39"
+serde = "1.0.91"
+chrono = { version = "0.4", features = ["serde"] }
+num_cpus = "1.10.0"
+futures = "0.1.14"
