--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 actix-web = "2.0"
 actix = "0.9.0"
 actix-rt = "1.0"
-actix_files = "0.2.1"
+actix-files = "0.2.1"
 diesel = { version = "1.4.2", features = ["chrono", "sqlite", "serde_json"] }
 dotenv = "0.10.1"
 failure = "0.1.5"
