--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ actix-web = "2.0"
 actix = "0.9.0"
 actix-rt = "1.0"
 actix-files = "0.2.1"
+actix-multipart = "0.2.0"
 diesel = { version = "1.4.2", features = ["chrono", "sqlite", "serde_json"] }
 dotenv = "0.10.1"
 failure = "0.1.5"
@@ -21,4 +22,7 @@ serde_json = "1.0.39"
 serde = "1.0.91"
 chrono = { version = "0.4", features = ["serde"] }
 num_cpus = "1.10.0"
-futures = "0.1.14"
+futures = "0.3.1"
+libsqlite3-sys = { version = "*", features = ["bundled"] }
+tar = "0.4.26"
+flate2 = "1.0.13"
