--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "@types/js-cookie": "^2.2.4",
     "antd": "^3.26.7",
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1"
